dm-lwm2m-light: sync changes with ZMP dm-lwm2m sample
Sync changes with ZMP dm-lwm2m in order to be compatible with latest
Zephyr.

Signed-off-by: Ricardo Salveti <ricardo@opensourcefoundries.com>

--- a/dm-lwm2m-light/prj.conf
+++ b/dm-lwm2m-light/prj.conf
@@ -42,6 +42,10 @@ CONFIG_NET_APP_SETTINGS=y
 CONFIG_NET_APP_BT_NODE=y
 CONFIG_BT_DEVICE_NAME="Linaro IPSP node"
 
+# COAP
+CONFIG_COAP_EXTENDED_OPTIONS_LEN=y
+CONFIG_COAP_EXTENDED_OPTIONS_LEN_VALUE=32
+
 # PWM
 CONFIG_PWM=y
 #CONFIG_SYS_LOG_PWM_LEVEL=4
@@ -57,9 +61,6 @@ CONFIG_LWM2M_FIRMWARE_UPDATE_PULL_COAP_PROXY_SUPPORT=y
 CONFIG_LWM2M_IPSO_SUPPORT=y
 CONFIG_LWM2M_IPSO_LIGHT_CONTROL=y
 CONFIG_SYS_LOG_LWM2M_LEVEL=3
-
-# HTTP (LWM2M only uses the parser)
-CONFIG_HTTP_PARSER_URL_ONLY=y
 
 # Logging
 CONFIG_SYS_LOG=y
